# computation

./: .gitignore  .gitmodules  Cargo.toml  README.md  TODO.md  build.py  generate.py  macros.txt  makefile  mkdocs.yml  mkdocs_hooks.py  serve.sh  test.md
book/component/logic_circuits_to_machine/: Cargo.toml
cli/: Cargo.toml  README.md
cli/src/: lib.rs  repl_model.rs  runtime.rs
compile/counter_machine_to_logic_circuits/: Cargo.toml
compile/counter_machine_to_logic_circuits/src/components/: cell.json
compile/recursive_function_to_lambda_calculus/: Cargo.toml
compile/recursive_function_to_lambda_calculus/src/: lib.rs
compile/recursive_function_to_while_minus_lang/: Cargo.toml
compile/recursive_function_to_while_minus_lang/src/: lib.rs
compilers/recursive_function_to_lambda_calculus/: Cargo.toml
compilers/recursive_function_to_lambda_calculus/src/: lib.rs
integration/lambda_calculus/: Cargo.toml
integration/lambda_calculus/src/: main.rs
integration/while_minus_lang/: Cargo.toml  Trunk.toml
integration/while_minus_lang/src/: main.rs
mdbook/mdbook-trunk-build-renderer/: Cargo.toml
mdbook/mdbook-trunk-build-renderer/src/: main.rs
models/counter_machine/: Cargo.toml
models/counter_machine/core/: Cargo.toml  counter_machine.pest
models/counter_machine/cui/: Cargo.toml
models/counter_machine/src/: machine.rs  manipulation.rs
models/counter_machine/web/: Cargo.toml
models/goto_lang/: Cargo.toml  README.md  goto_lang.pest
models/goto_lang/src/: goto_render.rs  lib.rs  machine.rs  main.rs  manipulation.rs
models/lambda_calculus/: Cargo.toml  README.md  index.md
models/lambda_calculus/core/: Cargo.toml  parse.pest
models/lambda_calculus/core/src/: example.rs  lib.rs  machine.rs  manipulation.rs
models/lambda_calculus/cui/: Cargo.toml
models/lambda_calculus/src/: example.rs  lib.rs  machine.rs  manipulation.rs  web.rs
models/lambda_calculus/web/: Cargo.toml  index.html  lambda_calculus_glue.js
models/lambda_calculus/web/src/: lib.rs
models/logic_circuit/: Cargo.toml  README.md  index.md  logic_circuit_glue.js
models/logic_circuit/core/: Cargo.toml
models/logic_circuit/core/src/: example.rs  lib.rs  logic_circuit.pest  machine.rs  manipulation.rs
models/logic_circuit/cui/: Cargo.toml
models/logic_circuit/src/: example.rs  lib.rs  logic_circuit.pest  machine.rs  manipulation.rs  parse.rs  parser.rs  tests.rs
models/logic_circuit/src/logic_circuits/: examples.txt
models/logic_circuit/src/machine/: circuit_components.rs  logic_circuit.rs
models/logic_circuit/web/: Cargo.toml  index.html  logic_circuits_glue.js
models/logic_circuit/web/src/: lib.rs
models/pcf/: Cargo.toml  README.md
models/pcf/src/: CEK.md  SECD.md  cek_machine.rs  cek_render.rs  compiler.rs  expr.md  expr_machine.rs  expr_render.rs  expr_stmt.md  expr_stmt_machine.rs  expr_stmt_parser.rs  expr_stmt_render.rs  lib.rs  secd_machine.rs  secd_render.rs  syntax.rs  syntax_parser.rs
models/rec-tm/: Cargo.toml  README.md  index.md
models/rec-tm/src/: lib.rs
models/rec-tm/src/rec_tm_ir/: IR1.md  IR1_IR2.md  compile_jump.rs  machine.rs  mod.rs  parser.rs  test.rs
models/rec-tm/src/rec_tm_ir_jump/: IR2.md  IR2_tm.md  compile_tm.rs  machine.rs  mod.rs  parser.rs
models/rec-tm/src/rec_to_ir/: mod.rs  rec_IR1.md  tests.rs
models/recursive_function/: Cargo.toml  README.md  index.md  parse.pest
models/recursive_function-lambda_calculus/: Cargo.toml
models/recursive_function-lambda_calculus/src/: lib.rs
models/recursive_function/core/: Cargo.toml
models/recursive_function/core/src/: machine.rs  manipulation.rs
models/recursive_function/cui/: Cargo.toml
models/recursive_function/src/: lib.rs  machine.rs  main.rs  manipulation.rs  parser.rs  recursive_render.rs
models/recursive_function/web/: Cargo.toml  index.html  recursive_function_glue.js
models/structured_lang/: Cargo.toml  README.md  index.md
models/structured_lang/src/: data_lang.md  expr_lang.md  expr_lang.rs  expr_lang_compiler.rs  expr_lang_parser.rs  expr_lang_render.rs  fn_ptr_render.rs  internal_ctrl.md  internal_ctrl.rs  internal_ctrl_compiler.rs  internal_ctrl_parser.rs  lib.rs  mini_prog_machine.rs  mini_prog_render.rs  mini_prog_tests.rs  proc_lang.md  proc_lang.rs  proc_lang_compiler.rs  proc_lang_parser.rs
models/tiny_isa/: Cargo.toml  README.md  index.md
models/tiny_isa/src/: cfg_vreg.rs  cfg_vreg_parser.rs  cfg_vreg_render.rs  lib.rs  symbolic_asm.rs  symbolic_asm_parser.rs  symbolic_asm_render.rs  tiny_isa.rs  tiny_isa_parser.rs  tiny_isa_render.rs
models/turing_machine/: Cargo.toml  README.md  index.md
models/turing_machine/core/: Cargo.toml
models/turing_machine/cui/: Cargo.toml
models/turing_machine/demo/: index.html
models/turing_machine/src/: bin_adder.txt  control.rs  example.rs  lib.rs  machine.rs  main.rs  manipulation.rs  parse.rs  test.rs  view.rs  web.rs
models/turing_machine/test_view/: index.html
models/turing_machine/web/: Cargo.toml  glue.js  turing_machine_glue.js
models/while_language/: Cargo.toml  index.md
models/while_language/core/: Cargo.toml
models/while_language/src/: compiler.rs  lib.rs  machine.rs  manipulation.rs
test_view/: Cargo.toml  index.css
test_view/src/: lc.txt  main.rs
utils/: Cargo.toml
utils/src/: alphabet.rs  bool.rs  cli.rs  cli_compiler.rs  data.rs  identifier.rs  lexer.rs  lib.rs  machine_ipc.rs  number.rs  parse.rs  render.rs  set.rs  variable.rs  view.rs  wasm_util.rs  web_util.rs
utils/src/data/: bool.rs  identifier.rs  number.rs
utils/src/machine/: cli.rs  client.rs  config.rs  daemon_ctl.rs  ipc.rs  mod.rs  output.rs  repl_model.rs  service.rs
utils/wit/: web.wit
view/counter_machine/: Cargo.toml
view/counter_machine/src/: lib.rs
view/lambda_calculus/: Cargo.toml
view/lambda_calculus/src/: lib.rs
view/recursive_function/: Cargo.toml
view/recursive_function/src/: lib.rs
view/turing_machine/: Cargo.toml
view/turing_machine/src/: control.rs  lib.rs  machine.rs
web_builder/: Cargo.toml
web_builder/src/: lib.rs
web_compiler/: Cargo.toml
web_compiler/src/: lib.rs
(+616 files in other folders)
