[workspace]
resolver = "2"
members = [
  "utils",
  "models/*/core",
  "models/*/cui",
  "models/*/web",
  "compile/*",
  "test_global_tape",
]

exclude = [
  "*/dist",
]

[workspace.dependencies]
utils = { path = "./utils" }

counter_machine_core = { path = "./models/counter_machine/core" }
cpu_emulator_core = { path = "./models/cpu_emulator/core" }
lambda_calculus_core = { path = "./models/lambda_calculus/core" }
lambda_continuation_cores = { path = "./models/lambda_continuations/core" }
logic_circuit_core = { path = "./models/logic_circuit/core" }
my_hdl_core = { path = "./models/my_hdl/core" }
recursive_function_core =  { path = "./models/recursive_function/core" }
turing_machine_core = { path = "./models/turing_machine/core" }
while_minus_lang_core = { path = "./models/while_minus_lang/core" }

either = "1.0.0"
anyhow = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.0" }
pest = "2.7.0"
pest_derive = "2.7.0"

yew = { version = "0.20.0", features = ["csr"] }
gloo = "0.8.0"
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.61", features = ["DragEvent", "DataTransfer", "InputEvent", "FileReaderSync", "Window"]}
serde-wasm-bindgen = "0.6.5"

[workspace.lints.rust]
type_complexity = "forbid"
