[workspace]
resolver = "2"
members = [
  "utils",
  "models/*",
  "compile/*",
  "web_builder",
]

exclude = [
  "*/dist",
]

[workspace.dependencies]
utils = { path = "./utils" }

turing_machine = { path = "./models/turing_machine" }
recursive_function =  { path = "./models/recursive_function" }
while_minus_lang = { path = "./models/while_minus_lang" }
lambda_calculus = { path = "./models/lambda_calculus" }
counter_machine = { path = "./models/counter_machine" }
cpu_emulator = { path = "./models/cpu_emulator" }
lambda_continuation = { path = "./models/lambda_continuations" }
logic_circuit = { path = "./models/logic_circuit" }
my_hdl = { path = "./models/my_hdl" }

either = "1.0.0"
anyhow = "1.0.0"

pest = "2.7.0"
pest_derive = "2.7.0"

wasm-bindgen = "0.2.84"

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.0" }
serde-wasm-bindgen = "0.6.5"

[workspace.lints.rust]
type_complexity = "forbid"
