[workspace]
resolver = "2"
members = [
  "utils",
  "models/*",
  "compilers/*",
  "web_builder",
  "web_compiler",
]

exclude = [
  "*/dist",
]

[workspace.dependencies]
utils = { path = "./utils" }
web_builder = { path = "./web_builder" }

goto_lang = { path = "./models/goto_lang" }
lambda_calculus = { path = "./models/lambda_calculus" }
lambda_continuation = { path = "./models/lambda_continuations" }
logic_circuit = { path = "./models/logic_circuit" }
my_hdl = { path = "./models/my_hdl" }
recursive_function =  { path = "./models/recursive_function" }
turing_machine = { path = "./models/turing_machine" }
while_lang = { path = "./models/while_language" }

either = "1.0.0"
anyhow = "1.0.0"

pest = "2.7.0"
pest_derive = "2.7.0"

wasm-bindgen = "0.2.84"

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.0" }
serde-wasm-bindgen = "0.6.5"
