[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = { workspace = true }
anyhow = { workspace = true }
yew = { workspace = true }
gloo = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
