[package]
name = "web_builder"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = { workspace = true }
serde-wasm-bindgen = { workspace = true }
web-sys = { workspace = true }

utils = { workspace = true }
turing_machine = { path = "../models/turing_machine", optional = true }

[features]
example = []
turing_machine = ["dep:turing_machine"]
