[package]
name = "web_compiler"
version = "0.1.0"
edition = "2024"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = { workspace = true }
serde-wasm-bindgen = { workspace = true }

utils = { workspace = true }

[features]
compiler = []
example = []
mod_counter = []
compiler-example-example = ["example"]
compiler-example-mod_counter = ["example", "mod_counter"]
