[package]
name = "web_compiler"
version = "0.1.0"
edition = "2024"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = { workspace = true }
serde-wasm-bindgen = { workspace = true }

utils = { workspace = true }

turing_machine = { path = "../models/turing_machine", optional = true }
lambda_calculus = { path = "../models/lambda_calculus", optional = true }
goto_lang = { path = "../models/goto_lang", optional = true }
recursive_function = { path = "../models/recursive_function", optional = true }

recursive_function_to_lambda_calculus = { path = "../compile/recursive_function_to_lambda_calculus", optional = true }

[features]
recursive_function-lambda_calculus = [ "dep:recursive_function_to_lambda_calculus" ]

