[package]
name = "counter_machine_to_logic_circuits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../../utils" }
logic_circuit = { path = "../../models/logic_circuit" }
counter_machine = { path = "../../models/counter_machine" }
