[package]
name = "counter_machine_to_logic_circuits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { workspace = true }
logic_circuit_core =  { workspace = true }
counter_machine_core = { workspace = true }
