[package]
name = "recursive_function_to_lambda_calculus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../../utils" }
lambda_calculus = { path = "../../models/lambda_calculus" }
recursive_function = { path = "../../models/recursive_function" }
