[package]
name = "recursive_function_to_while_minus_lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
while_minus_lang = { path = "../../models/while_minus_lang" }
recursive_function = { path = "../../models/recursive_function" }
