[package]
name = "recursive_function_to_lambda_calculus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { workspace = true }
lambda_calculus = { workspace = true }
recursive_function = { workspace = true }
