[package]
name = "lambda_calculus_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.8.0"
yew = { version = "0.20.0", features = ["csr"] }
lambda_calculus = { path = "../../models/lambda_calculus" }
lambda_calculus_view = { path = "../../view/lambda_calculus" }
