[package]
name = "while_minus_lang_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.8.0"
yew = { version = "0.20.0", features = ["csr"] }
while_minus_lang = { path = "../../models/while_minus_lang" }
while_minus_lang_view = { path = "../../view/while_minus_lang" }
