[package]
name = "counter_machine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { workspace = true }
pest = { workspace = true }
pest_derive = { workspace = true }
anyhow = { workspace = true }
