[package]
name = "goto_lang"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "goto_lang"
path = "src/bin/goto_lang.rs"

[dependencies]
utils = { workspace = true }
pest = { workspace = true }
pest_derive = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
