[package]
name = "lambda_calculus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "lambda_calculus"
path = "src/bin/lambda_calculus.rs"

[dependencies]
utils = { workspace = true }
pest = { workspace = true }
pest_derive = { workspace = true }
anyhow = { workspace = true }
wasm-bindgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
