[package]
name = "logic_circuit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../../utils" }
anyhow = { workspace = true }
either = { workspace = true }
pest = { workspace = true }
pest_derive = { workspace = true }
