[package]
name = "logic_circuit"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "logic_circuit"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { workspace = true }
anyhow = { workspace = true }
either = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
pest = { workspace = true }
pest_derive = { workspace = true }
