[package]
name = "recursive_function"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "recursive_function"
path = "src/bin/recursive_function.rs"

[dependencies]
utils = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
pest = { workspace = true }
pest_derive = { workspace = true }
