[package]
name = "lambda_calculus_view"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { workspace = true }
gloo = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }

lambda_calculus = { path = "../../models/lambda_calculus" }
utils = { path = "../../utils" }
