[package]
name = "logic_circuits_to_machine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { workspace = true }
gloo = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }
anyhow = { workspace = true }
logic_circuit = { path = "../../../models/logic_circuit" }
logic_circuit_view = { path = "../../../view/logic_circuit" }
